add mixin for buttons, add changes in structure of site

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 				</div>
 				<div class="top-bar-right medium-2 columns">
 					<ul class="menu align-right">
-						<li><button class="button hollow">Sing up</button></li>
+						<li><button class="button hollow default">Sing up</button></li>
 					</ul>
 				</div>
 			</div>
@@ -98,9 +98,9 @@
 			<div class="row">
 				<div class="large-4 columns">
 					<div class="button-group">
-						<a href="/" class="button hollow">All</a>
-						<a href="/" class="button hollow">Website</a>
-						<a href="/" class="button hollow">Branding</a>
+						<a href="/" class="button hollow default">All</a>
+						<a href="/" class="button hollow default">Website</a>
+						<a href="/" class="button hollow default">Branding</a>
 					</div>
 				</div>
 			</div>
@@ -114,12 +114,7 @@
 			</ul>
 			<div class="row">
 				<div class="columns">
-					<div class="callout">
-						<button class="close-button" aria-label="Close alert" type="button">
-							<span aria-hidden="true">&times;</span>
-						</button>
-					</div>
-
+					<a class="button more fa fa-plus" type="button"></a>
 				</div>
 			</div>
 		</div>
@@ -169,63 +164,56 @@
 						<h2 class="text-uppercase section-title"><span>Our</span> <br> <span>team</span>.</h2>
 					</div>
 				</div>
-				<div class="row">
-					<ul class="team-member-list">
-						<li class="team-member-item large-4 columns">
-							<div class="member-social-info">
-								<img class="round" src="images/team/img-3.jpg" alt="team-member">
-								<ul class="team-member-social-link clearfix">
-									<li class="float-left"><a class="fa fa-twitter" href="/"></a></li>
-									<li class="float-left"><a class="fa fa-facebook" href="/"></a></li>
-									<li class="float-left"><a class="fa fa-instagram" href="/"></a></li>
-								</ul>
-							</div>
-							<div class="about-member">
-								<h3 class="text-uppercase about-member-title">Michael Joe</h3>
-								<h3 class="subheader">CEO & Founder</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
-							</div>
-						</li>
-						<li class="team-member-item large-4 columns">
-							<div class="member-social-info">
-								<img class="round" src="images/team/img-1.jpg" alt="team-member">
-								<ul class="team-member-social-link clearfix">
-									<li class="float-left"><a class="fa fa-twitter" href="/"></a></li>
-									<li class="float-left"><a class="fa fa-facebook" href="/"></a></li>
-									<li class="float-left"><a class="fa fa-instagram" href="/"></a></li>
-								</ul>
-							</div>
-							<div class="about-member">
-								<h3 class="text-uppercase about-member-title">Jemmy Scott</h3>
-								<h3 class="subheader">Designer</h3>
-								<p>Voluptatem accusantium doloremque laudantium, totam rem aperiam.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
-							</div>
-						</li>
-						<li class="team-member-item large-4 columns">
-							<div class="member-social-info">
-								<img class="round" src="images/team/img-2.jpg" alt="team-member">
-								<ul class="team-member-social-link clearfix">
-									<li class="float-left"><a class="fa fa-twitter" href="/"></a></li>
-									<li class="float-left"><a class="fa fa-facebook" href="/"></a></li>
-									<li class="float-left"><a class="fa fa-instagram" href="/"></a></li>
-								</ul>
-							</div>
-							<div class="about-member">
-								<h3 class="text-uppercase about-member-title">Jasmin West</h3>
-								<h3 class="subheader">Manager</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
-							</div>
-						</li>
-					</ul>
-				</div>
+				<ul class="team-member-list row">
+					<li class="team-member-item large-4 columns">
+						<div class="member-social-info">
+							<img class="round" src="images/team/img-3.jpg" alt="team-member">
+							<ul class="team-member-social-link clearfix">
+								<li class="float-left"><a class="fa fa-twitter" href="/"></a></li>
+								<li class="float-left"><a class="fa fa-facebook" href="/"></a></li>
+								<li class="float-left"><a class="fa fa-instagram" href="/"></a></li>
+							</ul>
+						</div>
+						<div class="about-member">
+							<h3 class="text-uppercase about-member-title">Michael Joe</h3>
+							<h3 class="subheader">CEO & Founder</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+						</div>
+					</li>
+					<li class="team-member-item large-4 columns">
+						<div class="member-social-info">
+							<img class="round" src="images/team/img-1.jpg" alt="team-member">
+							<ul class="team-member-social-link clearfix">
+								<li class="float-left"><a class="fa fa-twitter" href="/"></a></li>
+								<li class="float-left"><a class="fa fa-facebook" href="/"></a></li>
+								<li class="float-left"><a class="fa fa-instagram" href="/"></a></li>
+							</ul>
+						</div>
+						<div class="about-member">
+							<h3 class="text-uppercase about-member-title">Jemmy Scott</h3>
+							<h3 class="subheader">Designer</h3>
+							<p>Voluptatem accusantium doloremque laudantium, totam rem aperiam.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+						</div>
+					</li>
+					<li class="team-member-item large-4 columns">
+						<div class="member-social-info">
+							<img class="round" src="images/team/img-2.jpg" alt="team-member">
+							<ul class="team-member-social-link clearfix">
+								<li class="float-left"><a class="fa fa-twitter" href="/"></a></li>
+								<li class="float-left"><a class="fa fa-facebook" href="/"></a></li>
+								<li class="float-left"><a class="fa fa-instagram" href="/"></a></li>
+							</ul>
+						</div>
+						<div class="about-member">
+							<h3 class="text-uppercase about-member-title">Jasmin West</h3>
+							<h3 class="subheader">Manager</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed.Voluptatem accusantium doloremque laudantium, totam rem aperiam</p>
+						</div>
+					</li>
+				</ul>
 				<div class="row">
 					<div class="columns">
-						<div class="callout">
-							<button class="close-button" aria-label="Close alert" type="button">
-								<span aria-hidden="true">&times;</span>
-							</button>
-						</div>
-
+						<a class="button more fa fa-plus" type="button"></a>
 					</div>
 				</div>
 			</div>
@@ -252,7 +240,6 @@
 						<h3 class="text-uppercase text-center achievement-description">Awards</h3>
 					</li>
 				</ul>
-
 			</div>
 		</div>
 		<div class="our-skills">
@@ -331,7 +318,7 @@
 					<p class="subscribe-description">Enter your e-mail here...</p>
 				</div>
 				<div class="large-2 columns end">
-					<button class="button float-right">Subscribe</button>
+					<button class="button float-right default">Subscribe</button>
 				</div>
 			</div>
 
@@ -355,7 +342,7 @@
 				<div class="large-4 columns">
 					<p class="contacts address">123A Building, Road Street, Orlando District, US</p>
 					<p class="contacts">
-						<span class="phone">+01 234 567 89 - +01 234 567 89</span><span class="contact-mail">contact@book.com</span>
+						<span class="phone">+01 234 567 89 - +01 234 567 89</span> <span class="contact-mail">contact@book.com</span>
 					</p>
 					<ul class="social-link clearfix">
 						<li class="social-link-item float-left"><a href="/" class="fa fa-twitter"></a></li>
