add new class for bocks our-skills, footer

--- a/src/index.html
+++ b/src/index.html
@@ -250,11 +250,19 @@
 			</div>
 			<div class="row">
 				<div class="large-8 columns">
-					<div class="row">
-						<div class="large-3 columns">1</div>
-						<div class="large-3 columns">2</div>
-						<div class="large-3 columns">3</div>
-						<div class="large-3 columns">4</div>
+					<div class="row skill-diagram">
+						<div class="large-3 columns">
+							<div class="diagram three-quarter"></div>
+						</div>
+						<div class="large-3 columns">
+							<div class="diagram quarter"></div>
+						</div>
+						<div class="large-3 columns">
+							<div class="diagram three-quarter"></div>
+						</div>
+						<div class="large-3 columns">
+							<div class="diagram half-diagram"></div>
+						</div>
 					</div>
 					<div class="row">
 						<div class="columns large-11 large-offset-1">
@@ -264,6 +272,9 @@
 								ipsum laudantium minima, nihil nulla quasi quod quos repellat vel vero! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 								Cupiditate delectus nemo quia veniam. A assumenda dignissimos, enim expedita explicabo
 								ipsum laudantium minima, nihil nulla quasi quod quos repellat vel vero</p>
+							<p class="article-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+								Cupiditate delectus nemo quia veniam. A assumenda dignissimos, enim expedita explicabo
+								ipsum laudantium minima, nihil nulla quasi.</p>
 						</div>
 					</div>
 				</div>
@@ -380,7 +391,7 @@
 					<p class="text-center"><span class="text-uppercase text-center site-title">Iddo</span></p>
 					<p class="copy-rights text-center"><i class="fa fa-copyright" aria-hidden="true"></i> 2014 IDDO. All rights resevered.</p>
 					<p class="author text-center">Designed by <span class="text-uppercase">DZOAN</span></p>
-					<p class="text-center"><a href="/" class="button up">up</a></p>
+					<p class="text-center"><a href="#" class="button scroll-up fa fa-chevron-up"></a></p>
 				</div>
 			</div>
 		</footer>
