add delete useless code in styles of block review, add right and left quote for reviews in html

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,8 @@
 
 		<div class="video-block">
 			<div class="flex-video">
-				<video  width="660" height="825" poster="http://media.html5book.ru/martynko.png" preload="none">
+				<!--<video  poster="http://media.html5book.ru/martynko.png" preload="none">-->
+				<video preload="none">
 					<source src="http://media.html5book.ru/martynko.mp4" type="video/mp4">
 					<source src="http://media.html5book.ru/martynko.webm" type="video/webm">
 					<source src="http://media.html5book.ru/martynko.ogv" type="video/ogg">
@@ -127,23 +128,35 @@
 							<button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
 							<li class="is-active orbit-slide">
 								<div class="user-review">
-									<p class="text-review">Sed ut perspiciatis unde omnis iste natus error sit voluptatem, ed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
-									<img src="" alt="client" class="user-photo">
-									<h5 class="text-uppercase user-name">Jack Efron</h5>
+									<p class="text-review text-center">
+										<span>&#8220;</span>
+										 Sed ut perspiciatis unde omnis iste natus error sit voluptatem, ed ut perspiciatis unde omnis iste natus error sit voluptatem
+										<span>&#8221;</span>
+									</p>
+									<img src="images/team/img-3.jpg" alt="client" class="user-photo float-center">
+									<h5 class="text-uppercase client-name text-center">Jack Efron</h5>
 								</div>
 							</li>
 							<li class="orbit-slide">
 								<div class="user-review">
-									<p class="text-review">Sed ut perspiciatis unde omnis iste natus error sit voluptatem, ed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
-									<img src="" alt="client" class="user-photo">
-									<h5 class="text-uppercase user-name">Jack Efron</h5>
+									<p class="text-review text-center">
+										<span>&#8220;</span>
+										Sed ut perspiciatis unde omnis iste natus error sit voluptatem, ed ut perspiciatis unde omnis iste natus error sit voluptatem
+										<span>&#8221;</span>
+									</p>
+									<img src="images/team/img-3.jpg" alt="client" class="user-photo float-center">
+									<h5 class="text-uppercase client-name text-center">Jack Efron</h5>
 								</div>
 							</li>
 							<li class="orbit-slide">
 								<div class="user-review">
-									<p class="text-review">Sed ut perspiciatis unde omnis iste natus error sit voluptatem, ed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
-									<img src="" alt="client" class="user-photo">
-									<h5 class="text-uppercase user-name">Jack Efron</h5>
+									<p class="text-review text-center">
+										<span>&#8220;</span>
+										Sed ut perspiciatis unde omnis iste natus error sit voluptatem, ed ut perspiciatis unde omnis iste natus error sit voluptatem
+										<span>&#8221;</span>
+									</p>
+									<img src="images/team/img-3.jpg" alt="client" class="user-photo float-center">
+									<h5 class="text-uppercase client-name text-center">Jack Efron</h5>
 								</div>
 							</li>
 						</ul>
