add wrapper for video-title controls_video-description

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Foundation for Sites</title>
-	<script src="https://use.fontawesome.com/99d40ab52a.js"></script>
 	<link rel="stylesheet" href="css/style.css">
+	<script src="https://use.fontawesome.com/99d40ab52a.js"></script>
 </head>
 <body>
 	<div class="page">
@@ -32,17 +32,17 @@
 			</div>
 		</header>
 		<div class="video-block">
-			<video preload="auto" id="bgvideo">
-				<source src="http://media.html5book.ru/martynko.mp4" type="video/mp4">
-				<source src="http://media.html5book.ru/martynko.webm" type="video/webm">
-				<source src="http://media.html5book.ru/martynko.ogv" type="video/ogg">
+			<video preload="auto" muted id="bgvideo">
+				<source src="video/apple-iPhone 7.mp4" type="video/mp4">
 			</video>
 			<div class="controls-video">
 				<div class="row">
 					<div class="medium-12 columns controls-video-content">
 						<button class="button play fa fa-play-circle-o"></button>
-						<h2 class="section-title video-title">Let me show you a few things.</h2>
-						<p class="controls_video-description">Click to play video</p>
+						<div class="wrapper_title">
+							<h2 class="section-title video-title">Let me show you a few things.</h2>
+							<p class="controls_video-description">Click to play video</p>
+						</div>
 					</div>
 				</div>
 			</div>
