add adaptive classes

--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,8 @@
 		<div class="services">
 			<div class="about-services">
 				<div class="row">
-					<div class="small-12 large-4 columns">
-						<h2 class="text-uppercase section-title">Our Services.</h2>
+					<div class="small-12 medium-6 large-4 columns">
+						<h2 class="text-uppercase section-title"><span>Our</span> <br> <span>Services.</span></h2>
 					</div>
 					<div class="small-12 large-8 columns">
 						<ul class="services-list row">
@@ -90,8 +90,8 @@
 		</div>
 		<div class="our-works">
 			<div class="row">
-				<div class="large-4 columns">
-					<h2 class="text-uppercase section-title">Our works.</h2>
+				<div class="small-12 medium-6 large-4 columns">
+					<h2 class="text-uppercase section-title"><span>Our</span> <br> <span>works.</span></h2>
 				</div>
 			</div>
 			<div class="row">
@@ -171,7 +171,7 @@
 		<div class="our-team">
 			<div class="about-team">
 				<div class="row">
-					<div class="small-12 large-4 columns">
+					<div class="small-12 medium-6 large-4 columns">
 						<h2 class="text-uppercase section-title"><span>Our</span> <br> <span>team</span>.</h2>
 					</div>
 				</div>
@@ -230,24 +230,24 @@
 			</div>
 			<div class="team-achievements">
 				<ul class="row achievements-list">
-					<li class="medium-3 large-3 columns">
+					<li class="medium-3 large-3 columns achievements-list-item">
 						<div class="icon text-center"><i class="fa fa-gift" aria-hidden="true"></i></div>
-						<div class="stat text-center">2009</div>
+						<div class="stat statistic text-center">2009</div>
 						<h3 class="text-uppercase text-center achievement-description">Perspiciatis</h3>
 					</li>
-					<li class="medium-3 large-3 columns">
+					<li class="medium-3 large-3 columns achievements-list-item">
 						<div class="icon text-center"><i class="fa fa-comments-o" aria-hidden="true"></i></div>
-						<div class="stat text-center">13,562</div>
+						<div class="stat statistic text-center">13,562</div>
 						<h3 class="text-uppercase text-center achievement-description">Comments</h3>
 					</li>
-					<li class="medium-3 large-3 columns">
+					<li class="medium-3 large-3 columns achievements-list-item">
 						<div class="icon text-center"><i class="fa fa-coffee" aria-hidden="true"></i></div>
-						<div class="stat text-center">8,710</div>
+						<div class="stat statistic text-center">8,710</div>
 						<h3 class="text-uppercase text-center achievement-description">Coffee cups</h3>
 					</li>
-					<li class="medium-3 large-3 columns">
+					<li class="medium-3 large-3 columns achievements-list-item">
 						<div class="icon text-center"><i class="fa fa-trophy" aria-hidden="true"></i></div>
-						<div class="stat text-center">715</div>
+						<div class="stat statistic text-center">715</div>
 						<h3 class="text-uppercase text-center achievement-description">Awards</h3>
 					</li>
 				</ul>
@@ -255,7 +255,7 @@
 		</div>
 		<div class="our-skills">
 			<div class="row">
-				<div class="large-4 columns">
+				<div class=" small-12 medium-6 large-4 columns">
 					<h2 class="text-uppercase section-title"><span>Our</span> <br> <span>skills</span>.</h2>
 				</div>
 			</div>
@@ -335,10 +335,10 @@
 		</div>
 		<div class="subscribe">
 			<div class="row">
-				<div class="large-4 columns large-offset-3">
+				<div class="small-11 small-offset-1 medium-6 columns large-offset-3">
 					<p class="subscribe-description">Enter your e-mail here...</p>
 				</div>
-				<div class="large-2 columns end">
+				<div class="small-5 small-offset-3 medium-2 medium-offset-0 columns end">
 					<button class="button float-right default">Subscribe</button>
 				</div>
 			</div>
@@ -346,17 +346,17 @@
 		</div>
 		<div class="partners">
 			<ul class="row partners-list">
-				<li class="partners-list-item large-2 large-offset-1 columns"><a href="#"><img src="images/partners/evato.png" alt="Evato" class="partner-logo"></a></li>
-				<li class="partners-list-item large-2 columns"><a href="#"><img src="images/partners/wordpress.png" alt="Wordpress" class="partner-logo"></a></li>
-				<li class="partners-list-item large-2 columns"><a href="#"><img src="images/partners/dribble.png" alt="Dribble" class="partner-logo"></a></li>
-				<li class="partners-list-item large-2 columns"><a href="#"><img src="images/partners/evato.png" alt="Evato" class="partner-logo"></a></li>
-				<li class="partners-list-item large-2 columns end"><a href="#"><img src="images/partners/wordpress.png" alt="Wordpress" class="partner-logo"></a></li>
+				<li class="partners-list-item small-12 small-offset-0 medium-4 medium-offset-0 large-2 columns large-offset-1"><a href="#"><img src="images/partners/evato.png" alt="Evato" class="partner-logo"></a></li>
+				<li class="partners-list-item small-12 medium-4 large-2 columns"><a href="#"><img src="images/partners/wordpress.png" alt="Wordpress" class="partner-logo"></a></li>
+				<li class="partners-list-item small-12 medium-4 large-2 columns"><a href="#"><img src="images/partners/dribble.png" alt="Dribble" class="partner-logo"></a></li>
+				<li class="partners-list-item small-12 medium-4 large-2 columns"><a href="#"><img src="images/partners/evato.png" alt="Evato" class="partner-logo"></a></li>
+				<li class="partners-list-item small-12 medium-4 large-2 columns end"><a href="#"><img src="images/partners/wordpress.png" alt="Wordpress" class="partner-logo"></a></li>
 			</ul>
 		</div>
 		<div class="contact-us">
 			<div class="row">
-				<div class="large-4 columns">
-					<h2 class="text-uppercase section-title">Contact us.</h2>
+				<div class="small-12 medium-6 large-4 columns">
+					<h2 class="text-uppercase section-title"> <span>Contact</span> <br> <span>us.</span></h2>
 				</div>
 			</div>
 			<div class="row">
