--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Foundation for Sites</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.min.css" />
 	<link rel="stylesheet" href="css/style.css">
 	<script src="https://use.fontawesome.com/99d40ab52a.js"></script>
 </head>
@@ -105,9 +106,9 @@
 			</div>
 			<ul class="row work-list">
 				<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/work1.jpg" alt="work"></div></li>
-				<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/work2.jpg" alt="work"></div></li>
-				<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/work1.jpg" alt="work"></div></li>
-				<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/work4.jpg" alt="work"></div></li>
+				<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/lawyer.jpg" alt="work"></div></li>
+				<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/work.png" alt="work"></div></li>
+				<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/wix1.png" alt="work"></div></li>
 				<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/work5.jpg" alt="work"></div></li>
 				<li class="work-list-item work-example small-12 medium-6 large-4 columns"><div class="work"><img src="images/works/work6.jpg" alt="work"></div></li>
 			</ul>
@@ -118,9 +119,9 @@
 			</div>
 		</div>
 		<div class="reviews">
-			<div class="row">
-				<div class="small-12 large-12 columns">
-					<div class="orbit" role="region" aria-label="Reviews of happy clients" data-orbit>
+			<!--<div class="row">-->
+				<!--<div class="small-12 large-12 columns">-->
+					<div class="orbit review-orbit" role="region" aria-label="Reviews of happy clients" data-orbit>
 						<ul class="orbit-container">
 							<button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
 							<button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
@@ -143,7 +144,7 @@
 										<span>&#8221;</span>
 									</p>
 									<img src="images/team/img-3.jpg" alt="client" class="user-photo float-center">
-									<h5 class="text-uppercase client-name text-center">Jack Efron</h5>
+									<h5 class="text-uppercase client-name text-center">Sara Efron</h5>
 								</div>
 							</li>
 							<li class="orbit-slide">
@@ -154,7 +155,7 @@
 										<span>&#8221;</span>
 									</p>
 									<img src="images/team/img-3.jpg" alt="client" class="user-photo float-center">
-									<h5 class="text-uppercase client-name text-center">Jack Efron</h5>
+									<h5 class="text-uppercase client-name text-center">Jack Salenberg</h5>
 								</div>
 							</li>
 						</ul>
@@ -164,8 +165,8 @@
 							<button data-slide="2"><span class="show-for-sr">Third slide details.</span></button>
 						</nav>
 					</div><!-- end orbit-->
-				</div>
-			</div>
+				<!--</div>-->
+			<!--</div>-->
 		</div><!--end reviews-->
 
 		<div class="our-team">
@@ -290,11 +291,13 @@
 					</div>
 				</div>
 				<div class="large-4 columns">
-					<ul class="accordion skill-list" data-accordion>
-						<li class="accordion-item skill-list-item is-active" data-accordion-item>
+					<ul class="accordion skill-list" data-allow-all-closed="true" data-accordion>
+						<li class="accordion-item skill-list-item" data-accordion-item>
 							<a href="#" class="accordion-title skill-title"><span class="icon">&#xf135;</span> Totam rem aperiam eaque</a>
 							<div class="accordion-content" data-tab-content>
-								I would start in the open state, due to using the `is-active` state class.
+								<p class="skills-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+									At, atque blanditiis consequatur dicta doloremque dolores hic, illum in molestiae
+									nihil nisi placeat quas quia similique tempora temporibus tenetur unde velit.</p>
 							</div>
 						</li>
 						<li class="accordion-item skill-list-item">
@@ -407,7 +410,9 @@
 		</footer>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-	<script src="js/app.js"></script>
+	<script src="js/foundation.min.js"></script>
+	<script src="js/plugins/foundation.orbit.js"></script>
 	<script src="js/video-play.js"></script>
+	<script src="js/app.js"></script>
 </body>
 </html>
